tests/baselines/reference/tsxErrorRecovery1.errors.txt
tests/cases/conformance/jsx/file.tsx(5,19): error TS1109: Expression expected.
tests/cases/conformance/jsx/file.tsx(8,11): error TS2304: Cannot find name 'a'.
tests/cases/conformance/jsx/file.tsx(8,12): error TS1005: '}' expected.
tests/cases/conformance/jsx/file.tsx(9,1): error TS17002: Expected corresponding JSX closing tag for 'div'.


==== tests/cases/conformance/jsx/file.tsx (4 errors) ====
    
    declare namespace JSX { interface Element { } }
    
    function foo() {
    	var x = <div>  { </div>
    	                 ~~
!!! error TS1109: Expression expected.
    }
    // Shouldn't see any errors down here
    var y = { a: 1 };
              ~
!!! error TS2304: Cannot find name 'a'.
               ~
!!! error TS1005: '}' expected.
    
    
!!! error TS17002: Expected corresponding JSX closing tag for 'div'.